# cpp-site

./: .gitignore  README.md  config.yaml  deploy.sh
.github/workflows/: hugo-build.yml
content/: _index.pl.md  harmonogram.pl.md  materialy.pl.md  zasady.pl.md
content/cpp/: _index.pl.md  harmonogram.pl.md  syllabus.pl.md
content/lab/: _index.pl.md
content/lab/l1/: index.pl.md
content/lab/l2/: index.pl.md
content/lab/l3/: index.pl.md
content/lab/l4/: index.pl.md
content/lab/l4/solution/: CMakeLists.txt
content/lab/l4/solution/lib/: CMakeLists.txt
content/lab/l4/solution/lib/base32/: CMakeLists.txt  base32_def.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
content/lab/l4/solution/src/: CMakeLists.txt  main.cpp
content/lab/l4/solution/tests/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp
content/lab/l5/: index.pl.md
content/lab/l6/: index.pl.md
content/lab/l7/: index.pl.md
content/wyk/: .gitignore  _index.pl.md
content/wyk/w1/: Makefile  classodr1.cpp  classodr2.cpp  helper.cpp  index.pl.md  main.cpp  middle.hpp  ns.cpp  odr1.cpp  odr2.cpp  point.cpp  point.hpp  splice.cpp  (+1 more)
content/wyk/w4/testing/: CMakeLists.txt
content/wyk/w4/testing/src/: CMakeLists.txt
content/wyk/w4/testing/src/fn/: CMakeLists.txt  functions.cpp
content/wyk/w4/testing/src/fn/include/: functions.hpp
content/wyk/w4/testing/src/main/: CMakeLists.txt  main.cpp
content/wyk/w4/testing/test/: CMakeLists.txt  fib_test.cpp  string_test.cpp
layouts/: index.html
layouts/shortcodes/: answer.html  github-link.html  includecode.html  resource.html
(+201 files in other folders)
